testsuite/tests/typing-misc-bugs/pr6946_bad.compilers.reference
File "pr6946_bad.ml", line 10, characters 8-11:
Error: This expression has type int
       This is not a function; it cannot be applied.
