testsuite/tests/typing-misc-bugs/pr6946_bad.ml
(* TEST
flags = " -w -a "
ocamlc_byte_exit_status = "2"
* setup-ocamlc.byte-build-env
** ocamlc.byte
*** check-ocamlc.byte-output
*)

external foo : int = "%ignore";;
let _ = foo ();;
